@@ -97,6 +97,7 @@ outputs=" \
          gm2/examples/hello/Makefile \
          gm2/examples/map/Makefile \
          gm2/examples/swig/exceptions/Makefile \
+         gm2/examples/swig/strlib/Makefile \
          gm2/examples/swig/tiny/Makefile \
          gm2/man/Makefile \
          gm2/p2c/Makefile \
